# datasworn

./: .editorconfig  .gitignore  .tool-versions  CHANGELOG.md  README.md  TODO.md  biome.jsonc  build.py  bun.lockb  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-viewer.yml
datasworn/: datasworn-source.schema.json  datasworn.schema.json
datasworn/ancient_wonders/: ancient_wonders.json
datasworn/classic/: classic.json
datasworn/delve/: delve.json
datasworn/fe_runners/: fe_runners.json
datasworn/ironsmith/: ironsmith.json
datasworn/ironsmith_darkness/: ironsmith_darkness.json
datasworn/lodestar/: lodestar.json
datasworn/starforged/: starforged.json
datasworn/starsmith/: starsmith.json
datasworn/sundered_isles/: sundered_isles.json
json-typedef/: datasworn.jtd.json
json-typedef/csharp-system-text/: AnyMoveConditionId.cs  AnyMoveConditionIdWildcard.cs  AnyMoveOutcomeId.cs  AnyMoveOutcomeIdWildcard.cs  Asset.cs  AssetAbilityControlFieldCounter.cs  AssetAbilityMoveConditionId.cs  AssetAbilityMoveConditionIdWildcard.cs  AssetAbilityMoveOutcomeId.cs  AssetAbilityMoveOutcomeIdWildcard.cs  AssetCollection.cs  AssetControlFieldSelectEnhancement.cs  AssetOptionFieldSelectEnhancement.cs  AssetOptionFieldSelectValue.cs  AtlasCollection.cs  AtlasEntry.cs  CounterField.cs  DelveSite.cs  DelveSiteDomain.cs  DelveSiteDomainDanger.cs  DelveSiteDomainFeature.cs  DelveSiteTheme.cs  DelveSiteThemeDanger.cs  DelveSiteThemeFeature.cs  EmbedOnlyType.cs  EmbeddedActionRollMove.cs  EmbeddedMoveActionRoll.cs  EmbeddedMoveNoRoll.cs  EmbeddedMoveProgressRoll.cs  EmbeddedMoveSpecialTrack.cs  EmbeddedNoRollMove.cs  EmbeddedOracleColumnText.cs  EmbeddedOracleColumnText2.cs  EmbeddedOracleColumnText3.cs  EmbeddedOracleRollableColumnText.cs  EmbeddedOracleRollableColumnText2.cs  EmbeddedOracleRollableColumnText3.cs  EmbeddedOracleRollableTableText.cs  EmbeddedOracleRollableTableText2.cs  EmbeddedOracleRollableTableText3.cs  (+68 more)
json-typedef/go/: datasworn.go
json-typedef/java-jackson/: AnyMoveConditionId.java  AnyMoveConditionIdWildcard.java  AnyMoveOutcomeId.java  AnyMoveOutcomeIdWildcard.java  Asset.java  AssetAbilityMoveConditionId.java  AssetAbilityMoveConditionIdWildcard.java  AssetAbilityMoveOutcomeId.java  AssetAbilityMoveOutcomeIdWildcard.java  AssetCollection.java  AtlasCollection.java  AtlasEntry.java  DelveSite.java  DelveSiteDomain.java  DelveSiteTheme.java  EmbedOnlyType.java  (+74 more)
pkg/python/datasworn/: README.md  pyproject.toml
pkg/python/datasworn-community-content/: README.md  pyproject.toml
pkg/python/datasworn-community-content/src/datasworn-community-content/ancient-wonders/: README.md  main.py  pyproject.toml
pkg/python/datasworn-community-content/src/datasworn-community-content/ancient-wonders/src/datasworn_community_content/ancient_wonders/: __init__.py
pkg/python/datasworn-community-content/src/datasworn-community-content/ancient-wonders/src/datasworn_community_content/ancient_wonders/json/: ancient_wonders.json
pkg/python/datasworn-community-content/src/datasworn-community-content/fe-runners/: pyproject.toml
pkg/python/datasworn-community-content/src/datasworn-community-content/fe-runners/src/datasworn_community_content/fe_runners/json/: fe_runners.json
pkg/python/datasworn-community-content/src/datasworn-community-content/starsmith/: pyproject.toml
pkg/python/datasworn-community-content/src/datasworn-community-content/starsmith/src/datasworn_community_content/starsmith/: __init__.py
pkg/python/datasworn-community-content/src/datasworn-community-content/starsmith/src/datasworn_community_content/starsmith/json/: starsmith.json
pkg/python/datasworn-community-content/src/datasworn_community_content/ancient-wonders/: pyproject.toml
pkg/python/datasworn-community-content/src/datasworn_community_content/fe-runners/: README.md  main.py  pyproject.toml
pkg/python/datasworn-community-content/src/datasworn_community_content/fe-runners/src/datasworn_community_content/fe_runners/json/: fe_runners.json
pkg/python/datasworn-community-content/src/datasworn_community_content/ironsmith/: README.md  pyproject.toml
pkg/python/datasworn-community-content/src/datasworn_community_content/starsmith/: README.md  pyproject.toml
pkg/python/datasworn-community-content/src/datasworn_community_content/starsmith/src/datasworn_community_content/starsmith/json/: starsmith.json
pkg/python/datasworn-community-content/tests/: test_datasworn_community_content.py
pkg/python/datasworn/src/datasworn/classic/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/classic/src/datasworn/classic/: __init__.py
pkg/python/datasworn/src/datasworn/classic/src/datasworn/classic/json/: classic.json
pkg/python/datasworn/src/datasworn/core/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/core/src/datasworn/core/: models.py
pkg/python/datasworn/src/datasworn/delve/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/delve/src/datasworn/delve/: __init__.py
pkg/python/datasworn/src/datasworn/delve/src/datasworn/delve/json/: delve.json
pkg/python/datasworn/src/datasworn/lodestar/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/starforged/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/starforged/src/datasworn/starforged/: __init__.py
pkg/python/datasworn/src/datasworn/starforged/src/datasworn/starforged/json/: starforged.json
pkg/python/datasworn/src/datasworn/sundered_isles/: README.md  pyproject.toml
pkg/python/datasworn/src/datasworn/sundered_isles/src/datasworn/sundered_isles/: __init__.py
pkg/python/datasworn/src/datasworn/sundered_isles/src/datasworn/sundered_isles/json/: sundered_isles.json
pkg/python/datasworn/tests/: test_datasworn.py
scripts/: NEW_EXPANSION.md  add-missing-starsmith-oracles.ts  add-oracle-links.ts  build-all.sh  convert-ironsmith-assets.ts  convert-ironsmith-flavor-packs.ts  convert-ironsmith-oracles.ts  convert-starsmith-assets.ts  new-expansion.ts  validate-packages.ts
source_data/: datasworn-source.schema.json
(+243 files in other folders)
