[project]
name = "datasworn-community-content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerhard Brandt", email = "gbrandt@cern.ch" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
datasworn-community-content = "datasworn_community_content:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
