[project]
name = "datasworn"
version = "0.1.0"
description = "Datasworn: A Python library for Ironsworn: Starforged data."
readme = "README.md"
authors = [{ name = "Gerhard Brandt", email = "gbrandt@cern.ch" }]
requires-python = ">=3.14"
dependencies = [
    "datasworn-classic",
    "datasworn-core",
    "datasworn-delve",
		"datasworn-lodestar",
    "datasworn-starforged",
    "datasworn-sundered-isles",
]


# [tool.uv]
# managed = true
# package = false  # the project itself is not a package

[tool.uv.workspace]
members = [
    "src/datasworn/classic",
    "src/datasworn/core",
    "src/datasworn/delve",
		"src/datasworn/lodestar",
    "src/datasworn/starforged",
    "src/datasworn/sundered_isles",
]

[tool.uv.sources]
datasworn-core = { workspace = true }
datasworn-classic = { workspace = true }
datasworn-starforged = { workspace = true }
datasworn-sundered-isles = { workspace = true }
datasworn-delve = { workspace = true }
datasworn-lodestar = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyclean>=3.4.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
]
