[project]
name = "datasworn-community-content-starsmith"
version = "0.1.0"
description = "Datasworn Community Content: StarSmith data."
readme = "README.md"
authors = [{ name = "Gerhard Brandt", email = "gbrandt@cern.ch" }]
requires-python = ">=3.14"
dependencies = []

[tool.uv.build-backend]
module-name = "datasworn_community_content.starsmith"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"
