[project]
name = "datasworn-community-content-fe-runners"
version = "0.1.0"
description = "Datasworn Community Content: FE Runners data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.build-backend]
module-name = "datasworn_community_content.fe_runners"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
