[project]
name = "datasworn-classic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerhard Brandt", email = "gbrandt@cern.ch" }
]
requires-python = ">=3.14"
dependencies = []

[tool.uv.build-backend]
module-name = "datasworn.classic"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
