[project]
name = "datasworn-lodestar"
version = "0.1.0"
description = "Datasworn: Lodestar expansion data (moves only)"
readme = "README.md"
authors = [
    { name = "Gerhard Brandt", email = "gbrandt@cern.ch" }
]
requires-python = ">=3.14"
dependencies = []

[tool.uv.build-backend]
module-name = "datasworn.lodestar"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
